@@ -118,8 +118,8 @@ typedef pthread_t thread_t;
 # define PTHREAD_STACK_MIN 0
 #endif
 
-#ifndef XTHREAD_STACKSIZE
-# define XTHREAD_STACKSIZE sizeof (long) * 4096
+#ifndef X_STACKSIZE
+# define X_STACKSIZE sizeof (long) * 4096
 #endif
 
 static int
@@ -131,11 +131,7 @@ thread_create (thread_t *tid, void *(*proc)(void *), void *arg)
 
   pthread_attr_init (&attr);
   pthread_attr_setdetachstate (&attr, PTHREAD_CREATE_DETACHED);
-
-  if (XTHREAD_STACKSIZE > 0)
-    pthread_attr_setstacksize (&attr, PTHREAD_STACK_MIN > (XTHREAD_STACKSIZE)
-                                      ? PTHREAD_STACK_MIN : (XTHREAD_STACKSIZE));
-
+  pthread_attr_setstacksize (&attr, PTHREAD_STACK_MIN < X_STACKSIZE ? X_STACKSIZE : PTHREAD_STACK_MIN);
 #ifdef PTHREAD_SCOPE_PROCESS
   pthread_attr_setscope (&attr, PTHREAD_SCOPE_PROCESS);
 #endif
